# skf

./: .gitignore  LICENSE  README.md  auto-update.sh  pyproject.toml
app/: app.py  requirements.txt
app/converter/: scrape.py
app/data/courses/: LFC108.json  LFD104.json  LFD105.json  LFD106.json  LFD121.json  LFD125.json  LFS180.json  LFS182.json  LFS183.json  LFS260.json  LFS262.json  SKF100.json  SKF200.json  SKF201.json
app/data/roles/: linuxfoundation_courses.json  role_learning_paths_ai.json  role_learning_paths_cybersecurity.json  role_learning_paths_kernel.json  role_learning_paths_kubernetes.json
app/static/2merge/assets/css/: app.css  ruang-admin.min.css  styles.css
app/static/assets/css/: ruang-admin.min.css  styles.css
app/templates/: checklist.html  course.html  courses.html  footer.html  header.html  labs.html  role.html  roles.html
