[tool.poetry]
name = "skf"
version = "0.1.0"
description = "Security Knowledge Framework - OWASP SKF Labs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-cors = "^3.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
